--- a/index.html
+++ b/index.html
@@ -1,24 +1,93 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 6</title>
-    <link rel="stylesheet" href="css/common.css" />
-  </head>
-  <body>
-    <ul>
-      <li><a href="task-01.html">Task 1</a></li>
-      <li><a href="task-02.html">Task 2</a></li>
-      <li><a href="task-03.html">Task 3</a></li>
-      <li><a href="task-04.html">Task 4</a></li>
-      <li><a href="task-05.html">Task 5</a></li>
-      <li><a href="task-06.html">Task 6</a></li>
-      <li><a href="task-07.html">Task 7</a></li>
-      <li><a href="task-08.html">Task 8</a></li>
-      <li><a href="task-09.html">Task 9</a></li>
-      <li><a href="task-10.html">Task 10 (optional)</a></li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Homework 6</title>
+  <link rel="stylesheet" href="css/common.css" />
+</head>
+
+<body>
+  <ul>
+    <li><a href="task-01.html">Task 1</a></li>
+    <li><a href="task-02.html">Task 2</a></li>
+    <li><a href="task-03.html">Task 3</a></li>
+    <li><a href="task-04.html">Task 4</a></li>
+    <li><a href="task-05.html">Task 5</a></li>
+    <li><a href="task-06.html">Task 6</a></li>
+    <li><a href="task-07.html">Task 7</a></li>
+    <li><a href="task-08.html">Task 8</a></li>
+    <li><a href="task-09.html">Task 9</a></li>
+    <li><a href="task-10.html">Task 10 (optional)</a></li>
+    <li><a href="lesson.html">slider</a></li>
+  </ul>
+</body>
+
+</html>
+ -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+<style>
+  /* Slideshow container */
+  .slider {
+    max-width: 500px;
+    position: relative;
+    transform: translate(0%, 60%);
+    margin: auto;
+  }
+
+  img {
+    vertical-align: middle;
+    width: 100%;
+  }
+
+  /* Next & previous buttons */
+  #previous,
+  #next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+
+  /* Position the "next button" to the right */
+  #next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* On hover, add a black background color with a little bit see-through */
+  #previous:hover,
+  #next:hover {
+    color: white;
+    background-color: rgba(61, 61, 61, 0.8);
+  }
+</style>
+
+<body>
+  <div class="slider">
+    <button id="previous">&#10094;</button>
+    <button id="next">&#10095;</button>
+  </div>
+  <script type="module" src="lesson.js"></script>
+</body>
+
+
 </html>
